kubernetes/apps/default/flagsmith/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flagsmith
spec:
  hostnames:
    - flagsmith.${LIMITED_DOMAIN}
  parentRefs:
    - name: external
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - kind: Service
          name: flagsmith-api
          port: 8000
      matches:
        - path:
            type: PathPrefix
            value: /api
    - backendRefs:
        - kind: Service
          name: flagsmith-frontend
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /
